--- a/src/app/pages/type-calc/type-coverage-insights/type-coverage-insights.component.scss
+++ b/src/app/pages/type-calc/type-coverage-insights/type-coverage-insights.component.scss
@@ -129,7 +129,7 @@
   align-self: center;
   border-radius: 0.25em;
   padding: 0.8em;
-  background-color: var(--primary);
+  background-color: var(--highlight);
 }
 
 :host ::ng-deep .most-super-effective-type app-type-combo-box .container,
